--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
 
 <body>
 
+    <main class="main">
+        <!-- Player 1 -->
+        <section class="player player-0 player--active" id="player-0">
+            <h2 class="player__name" id="player__name-0">Player 1</h2>
+            <span class="player__score" id="player__score-0">0</span>
+            <div class="player__currentscore">
+                <p class="player__currentscore-title">Current Score :</p>
+                <span class="player__currentscore-number" id="player-current-0">0</span>
+            </div>
+        </section>
+
+        <!-- Player 2 -->
+        <section class="player player-1" id="player-1">
+            <h2 class="player__name" id="player__name-1">Player 2</h2>
+            <span class="player__score" id="player__score-1">0</span>
+            <div class="player__currentscore">
+                <p class="player__currentscore-title">Current Score :</p>
+                <span class="player__currentscore-number" id="player-current-1">0</span>
+            </div>
+        </section>
+
+        <!-- Dice Image -->
+        <img src="images/dice-1.png" alt="Dice Images" class="dice-image">
+
+        <!-- Buttons -->
+        <button class="btn btn__new">🔄 New game</button>
+        <button class="btn btn__dice">🎲 Roll dice</button>
+        <button class="btn btn__hold">📥 Hold</button>
+    </main>
+
     <script src="js/scripts.js"></script>
 </body>
 
